classDiagram
    namespace Auth {
        class users {
            +INT id
            +VARCHAR mobile_number
            +VARCHAR password
            +VARCHAR full_name
            +ENUM role
        }
    }

    namespace Feed {
        class posts {
            +INT id
            +INT authorId
            +VARCHAR authorName
            +DATETIME created_at
            +TEXT text_content
            +VARCHAR image_url
            +INT likesCount
            +INT commentsCount
            +JSON comments
        }

        class post_likes {
            +INT user_id
            +JSON liked_post_ids
        }

        note for posts "Comments are stored inline as a JSON array of comment objects."
        note for post_likes "localStorage key kk_post_likes stores a userId -> [postId] map."
    }

    namespace Marketplace {
        class marketplace_ads {
            +INT id
            +INT vendorId
            +VARCHAR vendorName
            +VARCHAR vendorPhone
            +VARCHAR product_title
            +TEXT description
            +DECIMAL price
            +ENUM category
            +VARCHAR location
            +INT quantity
            +VARCHAR unit
            +VARCHAR image_url
        }
    }

    users "1" --> "0..*" posts : authors
    users "1" --> "0..*" marketplace_ads : vendors
    users "1" --> "0..1" post_likes : like state
   
